# repub_old

./: .gitignore  Cargo.toml  README.md  title.epub
OEBPS/: IIIF_Images.xhtml  navigation.xhtml  package.opf
OEBPS/styles/: vertical.css
sample/: markdown-cheatsheet.md
sample-repub/: sample.epub
sample-repub/OEBPS/: IIIF_Images.xhtml  package.opf
src/: main.rs  repub.rs
src/literals/: navigation.xhtml  package.opf  package.opf_manifest  package.opf_metadata  template.xhtml
title-repub/: sample.epub
title-repub/OEBPS/: markdown-cheatsheet.xhtml  package.opf
