[package]
name = "repub"
version = "0.1.1"
authors = [" <crome110mine@gmail.com>"]
edition = "2018"
description = "convert markdown(s) to epub"
license = "MIT"
categories = ["epub","markdown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.5"
comrak = "0.6"
clap = "2"
rand = "0.6"
chrono = "0.4"
scraper = "0.10.0"
zip = "0.5"